@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "tox_toolbox"
 #
-# Auto generated 19-12-2008 02:09
+# Auto generated 19-12-2008 09:26
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -12,7 +12,7 @@
 
 $EM_CONF[$_EXTKEY] = array(
 	'title' => 'tox-Toolbox',
-	'description' => 'Some useful settings for Typo3-Backend. For Example: En/Disable extCache, adminOnly, pageUnavailable_force ...',
+	'description' => 'Some useful settings for Typo3-Backend. For Example: extCache, adminOnly, pageUnavailable_force and more. All these settings are available at install-tool too. Maybe it is useful if the install-tool is unavailable.',
 	'category' => 'be',
 	'author' => 'Enrico Hoffmann',
 	'author_email' => 'hoffmann.enrico@gmail.com',
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 1,
 	'lockType' => '',
 	'author_company' => '',
-	'version' => '0.0.2',
+	'version' => '0.0.3',
 	'constraints' => array(
 		'depends' => array(
 		),
@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:7:{s:9:"ChangeLog";s:4:"6c7a";s:10:"README.txt";s:4:"ee2d";s:21:"ext_conf_template.txt";s:4:"8df5";s:12:"ext_icon.gif";s:4:"6c2b";s:17:"ext_localconf.php";s:4:"abb2";s:14:"ext_tables.php";s:4:"d2a7";s:14:"doc/manual.swx";s:4:"21af";}',
+	'_md5_values_when_last_written' => 'a:7:{s:9:"ChangeLog";s:4:"6c7a";s:10:"README.txt";s:4:"ee2d";s:21:"ext_conf_template.txt";s:4:"7a85";s:12:"ext_icon.gif";s:4:"6c2b";s:17:"ext_localconf.php";s:4:"95fc";s:14:"ext_tables.php";s:4:"d2a7";s:14:"doc/manual.swx";s:4:"21af";}',
 	'suggests' => array(
 	),
 );
