@@ -1,5 +1,10 @@
 (add new changes on top of this file)
 
+08-12-19 Enrico Hoffmann  <dasrick@gmail.com>
+
+	* add some more settings around pageUnavailble
+
 08-12-18 Enrico Hoffmann  <dasrick@gmail.com>
 
 	* Initial release
+	
